# audit

./: .gitignore  BUILD_STATUS.md  PATH_TO_10_10.md
archive_backups/: lib.rs.full_backup  lib_full.rs  lib_original.rs  lib_simple_rwa.rs  lib_with_joint_account.rs
defai_app_factory/src/: lib.rs
defai_estate/src/: lib.rs
defai_swap/src/: vrf.rs
security-auditor/: .gitignore  .prettierignore  AIRDROP_SEPARATION_FIX.md  AUDIT_PACKAGE_SUMMARY.md  Anchor.toml  BUILD_FIX_SUMMARY.md  BUILD_STATUS.md  CI_CD_AND_WEBSOCKET_GUIDE.md  Cargo.toml  ComposerReadme.md  FINAL_TODO_SUMMARY.md  FIX_TRACKING.md  HIGH_PRIORITY_TODOS_SUMMARY.md  INTEGRATION_SUMMARY.md  LOCAL_TESTING_GUIDE.md  ProgramsReadiness.md  README.md  SECURITY-AUDIT-README.md  SECURITY_TESTING_GUIDE.md  SETUP_GUIDE.md  TODO_COMPLETION_SUMMARY.md  VRFInit.md  admin-keypair.json  audit_report.md  build-programs.sh  defai_app_factory_keypair.json  defai_estate_keypair.json  defai_staking_keypair.json  defai_swap_keypair.json  deploy-localnet.sh  deployed-programs.json  fix-derive-accounts.sh  package-lock.json  package.json  security-audit-1752766283784.json  setup-anchor.sh  tailwind.config.js  test-results-1752766269868.json  test-results-1752768251140.json  test-results-1752768407081.json  (+8 more)
security-auditor/archive_backups/: lib.rs.backup_v3  lib_backup.rs
security-auditor/defai_app_factory/: Cargo.toml  README.md
security-auditor/defai_app_factory/src/: lib.rs  purchase_app.rs
security-auditor/defai_estate/: Cargo.toml  README.md
security-auditor/defai_staking/: Cargo.toml
(+137 files in other folders)
